--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
+  <string name="firefox_tv_brand_name">Firefox TV</string>
   <string name="pocket_brand_name">Pocket</string>
   <string name="action_cancel">キャンセル</string>
   <string name="action_ok">OK</string>
@@ -71,8 +72,8 @@
   <string name="homescreen_unpin_a11y">ピン留めを外す</string>
   <string name="homescreen_title">ホーム画面</string>
   <string name="pin_label">ホーム画面にピン留め</string>
-  <string name="notification_pinned_general">ホーム画面にピン留めしました</string>
-  <string name="notification_unpinned_general">ホーム画面から削除しました</string>
+  <string name="notification_pinned_general2">%1$s のホーム画面にピン留めしました</string>
+  <string name="notification_unpinned_general2">%1$s のホーム画面から削除しました</string>
   <string name="notification_pinned_site">Firefox TV のホーム画面にピン留めしました</string>
   <string name="notification_unpinned_site">Firefox TV のホーム画面から削除しました</string>
   <string name="pocket_home_tutorial_title">%1$s からおすすめの動画を紹介します</string>
