--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
+  <string name="firefox_tv_brand_name">Firefox TV</string>
   <string name="pocket_brand_name">Pocket</string>
   <string name="action_cancel">Cancelar</string>
   <string name="action_ok">OK</string>
@@ -58,13 +59,21 @@
   <string name="settings_cookies_dialog_title">Limpar todos os cookies e dados do site</string>
   <string name="settings_cookies_dialog_content">Selecionando ´Limpar agora´ irá limpar todos os cookies e dados dos sites que foram armazenados pelo Firefox para Fire TV. Isso poderá desconectar suas contas das páginas web e remover conteúdos off-line.</string>
   <string name="turbo_mode">Modo Turbo</string>
+  <string name="turbo_mode_enabled_toast">Modo Turbo ativado</string>
+  <string name="turbo_mode_disabled_toast">Modo Turbo desativado</string>
   <string name="onboarding_turbo_mode_title">O Modo Turbo auxilia você a navegar mais rápido</string>
   <string name="onboarding_turbo_mode_body">O Modo Turbo bloqueia automaticamente rastreadores e anúncios para ajudá-lo a chegar ao seu destino mais rápido. Se houver algum problema de velocidade - como um site que não está se comportando da forma que você espera - apenas desligue o Modo Turbo.</string>
   <string name="onboarding_turbo_mode_button_on">Manter o Modo Turbo ativado</string>
   <string name="onboarding_turbo_mode_button_off">Desativar Modo Turbo</string>
+  <string name="turbo_mode_disable_a11y">Desativar o Modo Turbo</string>
+  <string name="turbo_mode_enable_a11y">Ativar o Modo Turbo</string>
   <string name="homescreen_unpin_tutorial_toast">Pressione e segure o SELECT para desafixar da tela inicial</string>
   <string name="homescreen_tile_remove">Remover</string>
+  <string name="homescreen_unpin_a11y">Desafixar</string>
+  <string name="homescreen_title">Tela inicial</string>
   <string name="pin_label">Fixar na tela inicial</string>
+  <string name="notification_pinned_general2">%1$s foi fixado à tela inicial</string>
+  <string name="notification_unpinned_general2">%1$s foi removido da tela inicial</string>
   <string name="notification_pinned_site">Fixado à tela inicial do Firefox TV</string>
   <string name="notification_unpinned_site">Removido da tela inicial do Firefox TV</string>
   <string name="pocket_home_tutorial_title">Introduzindo os vídeos recomendados pelo %1$s</string>
