--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
+  <string name="firefox_tv_brand_name">Firefox TV</string>
   <string name="pocket_brand_name">Pocket</string>
   <string name="action_cancel">取消</string>
   <string name="action_ok">确定</string>
@@ -71,6 +72,8 @@
   <string name="homescreen_unpin_a11y">取消固定</string>
   <string name="homescreen_title">主屏幕</string>
   <string name="pin_label">固定到主屏幕</string>
+  <string name="notification_pinned_general2">已固定到 %1$s 的主屏幕上</string>
+  <string name="notification_unpinned_general2">已从 %1$s 的主屏幕上移除</string>
   <string name="notification_pinned_site">已固定到 Firefox TV 主屏幕</string>
   <string name="notification_unpinned_site">已从 Firefox TV 主屏幕移除</string>
   <string name="pocket_home_tutorial_title">介绍由“%1$s”推荐的视频</string>
