Closes #952: Move string references to a separate file.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,11 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 <resources>
+    <!-- ####################################################################################### -->
+    <!-- ## Put only strings into this file that should be translated. Move all other strings ## -->
+    <!-- ## into a separate file like strings_references.xml                                  ## -->
+    <!-- ####################################################################################### -->
+
     <!-- The brand name of this app -->
     <string name="firefox_tv_brand_name">Firefox TV</string>
 
@@ -88,11 +93,7 @@
     ]]>
     </string>
 
-    <string name="error_connect_title">@string/error_connectionfailure_title</string>
-    <string name="error_connect_message">@string/error_connectionfailure_message</string>
-
     <string name="error_timeout_title">The connection timed out</string>
-    <string name="error_timeout_message">@string/error_connectionfailure_message</string>
 
     <string name="error_hostLookup_title">Server not found</string>
     <string name="error_hostLookup_message"><![CDATA[
