--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -57,11 +57,14 @@
   <string name="your_rights_content4"><![CDATA[%1$s 其他源代码以各类自由和开源<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">&amp;#35768;&amp;#21487;&amp;#35777;</a>开放。]]></string>
   <string name="your_rights_content5"><![CDATA[\"%1$s 还使用 Disconnect 公司提供的阻止列表，它是以 \"<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">GNU &amp;#36890;&amp;#29992;&amp;#20844;&amp;#20849;&amp;#35768;&amp;#21487;&amp;#35777; v3</a>\" 提供的一个独立的作品，可在\"<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%3$s">&amp;#36825;&amp;#37324;</a>找到。]]></string>
   <string name="settings_cookies_dialog_title">清除所有 Cookie 和站点数据</string>
+  <string name="settings_cookies_dialog_content2">这将清除所有 Cookie 和网站数据。清除此信息可能会使您退出网站登录并删除存储的离线 Web 内容。</string>
   <string name="turbo_mode">加速模式</string>
   <string name="turbo_mode_enabled_toast">已启用加速模式</string>
   <string name="turbo_mode_disabled_toast">已禁用加速模式</string>
   <string name="onboarding_turbo_mode_title">加速模式下浏览更快更轻巧</string>
   <string name="onboarding_turbo_mode_body">加速模式会自动拦截跟踪器与广告，访问网站更迅捷。若您发现网站无法正常工作，请退出加速模式。</string>
+  <string name="button_turbo_mode_keep_enabled">保持启用</string>
+  <string name="button_turbo_mode_turn_off">关闭</string>
   <string name="turbo_mode_disable_a11y">已关闭加速模式</string>
   <string name="turbo_mode_enable_a11y">已打开加速模式</string>
   <string name="homescreen_unpin_tutorial_toast">长按 SELECT 键从主屏幕取消固定</string>
