Import translations from L10N repository (20180715-121423)

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -57,11 +57,14 @@
   <string name="your_rights_content4"><![CDATA[\"Codice sorgente aggiuntivo per %1$s è disponibile nei termini di altre \"<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">licenze</a>\" libere e Open Source.\"]]></string>
   <string name="your_rights_content5"><![CDATA[\"%1$s utilizza un servizio di \"<em xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">blocklist</em>\" fornito da Disconnect, Inc. in qualità di opera aggiuntiva e separata, distribuita nei termini della \"<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">GNU General Public License v3</a>\" e disponibile \"<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%3$s">qui</a>.]]></string>
   <string name="settings_cookies_dialog_title">Elimina tutti i cookie e i dati dei siti web</string>
+  <string name="settings_cookies_dialog_content2">Ciò eliminerà tutti i cookie e i dati raccolti. Rimuovere queste informazioni potrebbe causare la disconnessione da siti web e l\'eliminazione dei contenuti web salvati offline.</string>
   <string name="turbo_mode">Modalità turbo</string>
   <string name="turbo_mode_enabled_toast">Modalità turbo attivata</string>
   <string name="turbo_mode_disabled_toast">Modalità turbo disattivata</string>
   <string name="onboarding_turbo_mode_title">La modalità turbo ti permette di navigare più velocemente</string>
   <string name="onboarding_turbo_mode_body">La modalità turbo blocca in automatico elementi traccianti e pubblicità per caricare le pagine più rapidamente. Se incontri un problema, come un sito che non funziona come dovrebbe, basterà disattivare la modalità turbo.</string>
+  <string name="button_turbo_mode_keep_enabled">Mantieni attiva</string>
+  <string name="button_turbo_mode_turn_off">Disattiva</string>
   <string name="turbo_mode_disable_a11y">Disattiva modalità turbo</string>
   <string name="turbo_mode_enable_a11y">Attiva modalità turbo</string>
   <string name="homescreen_unpin_tutorial_toast">Per sbloccare un elemento nella pagina principale tieni premuto SELECT</string>
