Import translations from L10N repository (20180817-121917)

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -85,4 +85,7 @@
   <string name="pocket_video_feed_reload_button">Erneut versuchen</string>
   <string name="pocket_video_feed_a11y_navigation">Verwenden Sie links und rechts, um zwischen Videos hin- und herzuschalten</string>
   <string name="pocket_video_feed_a11y_feed_item_focused">%1$s auf %2$s</string>
+  <string name="google_search_tile_title">Mit Google suchen</string>
+  <string name="google_search_hint_text">Mit Google suchen oder Adresse eingeben</string>
+  <string name="blank_tile_title">Website hinzufügen</string>
 </resources>
