--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -85,4 +85,7 @@
   <string name="pocket_video_feed_reload_button">Riprova</string>
   <string name="pocket_video_feed_a11y_navigation">Utilizza i tasti verso sinistra e destra per muoverti tra i video</string>
   <string name="pocket_video_feed_a11y_feed_item_focused">%1$s da %2$s</string>
+  <string name="google_search_tile_title">Cerca con Google</string>
+  <string name="google_search_hint_text">Cerca con Google o inserisci un indirizzo</string>
+  <string name="blank_tile_title">Aggiungi un sito web</string>
 </resources>
