--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -85,4 +85,7 @@
   <string name="pocket_video_feed_reload_button">Volver a intentarlo</string>
   <string name="pocket_video_feed_a11y_navigation">Usar izquierda y derecha para moverse entre los videos</string>
   <string name="pocket_video_feed_a11y_feed_item_focused">%1$s de %2$s</string>
+  <string name="google_search_tile_title">Buscar con Google</string>
+  <string name="google_search_hint_text">Buscar con Google o introducir la dirección</string>
+  <string name="blank_tile_title">Añadir un sitio web</string>
 </resources>
