--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -88,4 +88,5 @@
   <string name="google_search_tile_title">Mit Google suchen</string>
   <string name="google_search_hint_text">Mit Google suchen oder Adresse eingeben</string>
   <string name="blank_tile_title">Website hinzufügen</string>
+  <string name="dialog_clear_cookies_title">Cookies löschen?</string>
 </resources>
