--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -88,4 +88,5 @@
   <string name="google_search_tile_title">Cerca con Google</string>
   <string name="google_search_hint_text">Cerca con Google o inserisci un indirizzo</string>
   <string name="blank_tile_title">Aggiungi un sito web</string>
+  <string name="dialog_clear_cookies_title">Eliminare i cookie?</string>
 </resources>
