--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -88,4 +88,5 @@
   <string name="google_search_tile_title">Buscar con Google</string>
   <string name="google_search_hint_text">Buscar con Google o introducir la dirección</string>
   <string name="blank_tile_title">Añadir un sitio web</string>
+  <string name="dialog_clear_cookies_title">¿Limpiar cookies?</string>
 </resources>
