--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -88,4 +88,5 @@
   <string name="google_search_tile_title">Rechercher avec Google</string>
   <string name="google_search_hint_text">Rechercher avec Google ou saisir une adresse</string>
   <string name="blank_tile_title">Ajouter un site web</string>
+  <string name="dialog_clear_cookies_title">Effacer les cookies ?</string>
 </resources>
