--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -88,4 +88,5 @@
   <string name="google_search_tile_title">Pesquisar com o Google</string>
   <string name="google_search_hint_text">Pesquise com o Google ou insira o endereço</string>
   <string name="blank_tile_title">Adicionar site</string>
+  <string name="dialog_clear_cookies_title">Limpar os Cookies?</string>
 </resources>
