--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -62,8 +62,12 @@
   <string name="turbo_mode_enabled_toast">Mode turbo activé</string>
   <string name="turbo_mode_disabled_toast">Mode turbo désactivé</string>
   <string name="onboarding_turbo_mode_title">Le mode turbo vous permet de naviguer plus rapidement</string>
+  <string name="onboarding_turbo_mode_body2">Le mode turbo bloque automatiquement publicités et traqueurs.\nSi un site ne fonctionne pas comme vous l’attendiez, essayez de le désactiver.</string>
+  <string name="button_turbo_mode_keep_enabled2">Laisser le mode turbo activé</string>
+  <string name="button_turbo_mode_turn_off2">Désactiver le mode turbo</string>
   <string name="turbo_mode_disable_a11y">Désactiver le mode turbo</string>
   <string name="turbo_mode_enable_a11y">Activer le mode turbo</string>
+  <string name="turbo_mode_image_a11y">Exemple avec le mode turbo activé</string>
   <string name="homescreen_unpin_tutorial_toast">Effectuez un appui long sur SELECT pour détacher cet élément de l’écran d’accueil</string>
   <string name="homescreen_tile_remove">Retirer</string>
   <string name="homescreen_unpin_a11y">Détacher</string>
